--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,3 +1,11 @@
 FROM python:3.6
 
 EXPOSE 5000
+
+WORKDIR /app
+
+COPY requirements.txt /app
+
+RUN pip install -r requirements.txt
+
+CMD python app.py
